Providing a target to run all connector dev-tests with security manager on : ant "all-with-security-manager"
svn path=/trunk/; revision=35039


Former-commit-id: 1455669fce0c35eccb78efbd45b6cca18b2cc3cf